--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "finanse"]
-	path = finanse
-	url = https://bevesce@github.com/bevesce/finanse.git
+[submodule "fin"]
+	path = fin
+	url = git@github.com:bevesce/fin.git
